# bookify_backend

./: Cargo.toml  env.env
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-10-29-043612_add_filename_to_publications/: down.sql  up.sql
backend/migrations/2024-11-04-193122_create_sources/: up.sql
backend/migrations/2024-11-04-193712_create_digital_publications/: down.sql  up.sql
backend/src/: digital_publications.rs  main.rs  models.rs  publications.rs  schema.rs  sources.rs
backend/static/: index.html  ui1.html  ui2.html  ui3.html  ui4.html
backend/static/fonts/ProximaNova/: ProximaNova-Black.eot  ProximaNova-Bold.eot  ProximaNova-Extrabld.eot  (+7 more)
frontend/: .env  Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/components/atoms/: axis.css  axis.rs  axis_item.rs  mod.rs  publication.css  publication.rs  search_bar.css  search_bar.rs  sigma.css  sigma.rs
frontend/src/components/organisms/: actions.css  actions.rs  header.css  header.rs  mod.rs  publications.css  publications.rs
frontend/src/components/pages/: main.css  main.rs
migrations/2024-10-29-025313_create_publications/: down.sql  up.sql
rusmarc_raw/: Cargo.toml  README.md  test.sh
rusmarc_raw/src/: field.rs  lib.rs  main.rs  record.rs
rusmarc_raw/src/typed_record/: fields0xx.rs  fields1xx.rs  fields2xx.rs  mod.rs  util.rs
rusmarc_raw_macros/: Cargo.toml
rusmarc_raw_macros/src/: derive_parse_typed.rs  derive_typed_field.rs  lib.rs  proc_rusmarc_docs.rs  util.rs
src/: db.rs  main.rs  models.rs  publications.rs  schema.rs
