[package]
name = "bookify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
log4rs = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
