[package]
name = "bookify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
