[package]
name = "bookify_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = { version = "0.11.0", features = ["net"] }
serde = "1.0.214"
serde_json = "1.0.132"
stylist = { version = "0.13.0", features = ["parser", "yew_integration"] }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
